<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.select.mcmaps.getstart.ConnectActivity">
    <View
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:visibility="invisible"
        android:layout_height="match_parent"
        android:id="@+id/view_background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_loadertext"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/loader_horizontal_margin"
        android:textSize="@dimen/loader_text_size"
        android:transitionName="text_loader"
        android:text="@string/hey_hi_hello" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="top"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_loader"
        android:layout_gravity="center|top"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/loader_horizontal_margin"
        android:textSize="@dimen/loader_text_size"
        android:textColor="@android:color/white"
        android:alpha="0"
        android:text="@string/hey_hi_hello" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_welocme"
            android:layout_marginTop="@dimen/welcome_margin"
            android:textSize="@dimen/title_text_size"
            android:visibility="invisible"
            android:alpha="0"
            android:textColor="@android:color/white"
            android:text="@string/welcome" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:scaleX="0"
            android:clickable="true"
            android:scaleY="0"
            android:src="@mipmap/ic_arrow_forward_black_24dp"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:alpha="0"
            android:id="@+id/view_bottom"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_developed_by"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/normal_text_size"
            android:visibility="invisible"
            android:textColor="@android:color/white"
            android:alpha="0"
            android:text="@string/developed_by" />
        <View
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:layout_height="@dimen/view_height"
            android:alpha="0"
            android:id="@+id/view_navigation"/>
    </LinearLayout>
</FrameLayout>
